# sparky

./: CMakeLists.txt  main.cpp  test.cpp
core/graphics/: BatchRender.cpp  BatchRender.h  Rectangle2D.cpp  Rectangle2D.h  Render2D.cpp  Render2D.h  Renderable2D.h  Shader.cpp  Shader.h  Simple2DRender2D.cpp  Simple2DRender2D.h  window.cpp  window.h
core/graphics/buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
core/input/: InputManager.cpp  InputManager.h
core/maths/: Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  constants.h  mat4.cpp  mat4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
core/shaders/: basic.frag  basic.vert
core/utils/: Fileutils.h
